i18n/zh-CN/docusaurus-plugin-content-docs/version-2.1/gettingStarted/alternatives/alternative-to-clickhouse.mdx
---
{
    "title": "Apache Doris vs ClickHouse",
    "language": "zh-CN"
}

---

Apache Doris 和 ClickHouse 都是全球领先的实时数据仓库，均支持列式存储与极速查询。此外，Doris 具备更高的并发处理能力、更高效的 Join 查询、更简便的运维，并兼容 MySQL 的语法，使其更易于使用和部署。


## 精选案例

<div style={{ display:'flex', justifyContent:'space-between' }}>

    <div style={{paddingTop:'2rem', paddingBottom:'2rem',paddingLeft:'2rem',paddingRight:'2.5rem', boxSizing:'border-box', borderWidth:'0.5px', borderRadius:'0.75px', borderColor:'#e5e7eb'}}>
    
        <div style={{ display:'flex', justifyContent:'space-between', flexDirection:'column' }}>
            <div style={{marginBottom:'1.25rem'}}>
                <img alt='tencent-music' loading="lazy" width="95" height="40" decoding="async" data-nimg="1" style={{color:'transparent'}} src="/zh-CN/images/comparisons/kwai-zh-CN.png" />
            </div>
            <div style={{marginBbottom:'1.25rem'}}>
            “利用 Apache Doris 替换 ClickHouse 后，快手成功升级为湖仓一体架构，实现统一存储并简化数据链路，无需数据导入，Doris 可直接访问湖仓数据。结合 Doris 的物化视图改写与自动物化服务，实现了高性能查询与灵活的数据治理。”
            </div>
            <div style={{marginBbottom:'1.25rem'}}>
                <p><strong>亮点：</strong></p>             
                <ul>
                    <li>直接查询数据湖数据，缩短数据链路</li>
                    <li>查询性能提升，满足多场景查询加速</li>
                    <li>借助物化视图，实现更灵活数据治理</li>
                </ul>
            </div>
        </div>
    
    </div>

    <div style={{paddingTop:'2rem', paddingBottom:'2rem',paddingLeft:'2rem',paddingRight:'2.5rem', boxSizing:'border-box', borderWidth:'0.5px', borderRadius:'0.75px', borderColor:'#e5e7eb'}}>
    
        <div style={{ display:'flex', justifyContent:'space-between', flexDirection:'column' }}>
            <div style={{marginBottom:'1.25rem'}}>
                <img alt='tencent-music' loading="lazy" width="210" height="40" decoding="async" data-nimg="1" style={{color:'transparent'}} src="/zh-CN/images/comparisons/tencent-music-zh-CN.png" />
            </div>
            <div style={{marginBbottom:'1.25rem'}}>
            “内容库数据平台经过分析引擎从 ClickHouse 到 Apache Doris 的替换、数据架构语义层的初步引入到深度应用，有效提高了数据时效性、降低了运维成本、解决了数据管理割裂等问题。”
            </div>
            <div style={{marginBbottom:'1.25rem'}}>
                <p><strong>亮点：</strong></p>             
                <ul>
                    <li>具备多表查询和联邦查询性能特性</li>
                    <li>兼容 MySQL 协议，降低运维成本</li>
                    <li>支持部分列更新，满足多种数据更新方式</li>
                </ul>
            </div>
        </div>
    
    </div>

     <div style={{paddingTop:'2rem', paddingBottom:'2rem',paddingLeft:'2rem',paddingRight:'2.5rem', boxSizing:'border-box', borderWidth:'0.5px', borderRadius:'0.75px', borderColor:'#e5e7eb'}}>
    
        <div style={{ display:'flex', justifyContent:'space-between', flexDirection:'column' }}>
            <div style={{marginBottom:'1.25rem'}}>
                <img alt='tencent-music' loading="lazy" width="150" height="40" decoding="async" data-nimg="1" style={{color:'transparent'}} src="/zh-CN/images/comparisons/netease-music-zh-CN.png" />
            </div>
            <div style={{marginBbottom:'1.25rem'}}>
            “我们用 Apache Doris 替换了 ClickHouse，构建了新的日志平台，目前规模已达 50 台服务器、2PB 数据量。此次架构升级后，系统在查询响应、并发处理、稳定性及运维效率等多方面均取得了显著提升。”
            </div>
            <div style={{marginBbottom:'1.25rem'}}>
                <p><strong>亮点：</strong></p>             
                <ul>
                    <li>全文检索性能提升 3-7 倍</li>
                    <li>峰值写入吞吐达 6GB/s</li>
                    <li>支持 500+ 并发查询，较 ClickHouse 提升超 2 倍</li>
                </ul>
            </div>
        </div>
    
    </div>

</div> 


## 为什么选择 Apache Doris

<table border="1">
    <thead>
        <tr>
            <th></th>
            <th>Apache Doris</th>
            <th>ClickHouse</th>
        </tr>
    </thead>
    <tbody>
    <tr>
        <td><strong>系统架构</strong></td>
        <td>
        <ul>
            <li style={{fontSize:'14px'}}>基于 MPP 架构</li>
            <li style={{fontSize:'14px'}}>兼容 MySQL 协议，提供标准 SQL</li>
        </ul>
        </td>
        <td>
        <ul>
            <li style={{fontSize:'14px'}}>Scatter-Gather 架构</li>
            <li style={{fontSize:'14px'}}>类 SQL 语法且非标准 SQL 查询</li>
        </ul>
        </td>
    </tr>
      <tr>
        <td><strong>查询能力</strong></td>
        <td>
        <ul>
            <li style={{fontSize:'14px'}}>支持分布式 Join</li>
            <li style={{fontSize:'14px'}}>提供基于成本的查询优化器（Cost-Based Optimization）</li>
            <li style={{fontSize:'14px'}}>支持查询重写与多表物化视图性能</li>
            <li style={{fontSize:'14px'}}>提供更高的并发性能</li>
        </ul>
        </td>
        <td>
        <ul>
            <li style={{fontSize:'14px'}}>Join 性能较差</li>
            <li style={{fontSize:'14px'}}>不支持基于成本的查询优化器（CBO）</li>
            <li style={{fontSize:'14px'}}>仅支持单表物化视图</li>
            <li style={{fontSize:'14px'}}>并发性能较低</li>
        </ul>
        </td>
    </tr>
    <tr>
        <td><strong>实时更新</strong></td>
        <td><ul><li style={{fontSize:'14px'}}>具有强一致性主键存储模型，支持同步数据更新与删除</li></ul></td>
        <td><ul><li style={{fontSize:'14px'}}>仅支持异步更新，更新后可读取到旧值</li></ul></td>
    </tr>
    <tr>
        <td><strong>数据 API</strong></td>
        <td><ul><li style={{fontSize:'14px'}}>提供基于 Arrow-Flight 协议的高吞吐量读取 API，便于与其他引擎集成（如数据科学 / AI 工具）</li></ul></td>
        <td><ul><li style={{fontSize:'14px'}}>仅支持低效的 JDBC API 进行数据读取</li></ul></td>
    </tr>
    <tr>
        <td><strong>湖仓能力</strong></td>
        <td><ul><li style={{fontSize:'14px'}}>作为数据湖查询引擎，支持对 Hive、Hudi、Iceberg 和 Parquet 等数据湖格式查询</li></ul></td>
        <td><ul><li style={{fontSize:'14px'}}>湖仓集成能力有限</li></ul></td>
    </tr>
    <tr>
        <td><strong>运维</strong></td>
        <td><ul><li style={{fontSize:'14px'}}>支持自动扩缩容与多副本平衡</li></ul></td>
        <td><ul><li style={{fontSize:'14px'}}>扩缩容期间需要手动平衡</li></ul></td>
    </tr>
       <tr>
        <td><strong>性能测试</strong></td>
        <td>
        <ul>
            <li style={{fontSize:'14px'}}>在 ClickBench 测试中，Apache Doris 分别在 2022 年与 2024 年 十月进入榜单前三，测试结果超过 ClickHouse</li>
            <li style={{fontSize:'14px'}}>在 TPC-H 和 TPC-DS 测试中性能领先</li>
        </ul>
        </td>
        <td>
          <ul>
            <li style={{fontSize:'14px'}}>在 ClickBench 测试中，ClickHouse 与 Doris 轮流领先</li>
            <li style={{fontSize:'14px'}}>在 TPC-H 和 TPC-DS 测试中，ClickHouse 出现查询内存溢出（OOM）的问题</li>
        </ul>
        </td>
    </tr>
    </tbody>
</table>

## 性能对比

### ClickBench 性能测试


<div style={{ display:'flex', justifyContent:'space-between', flexDirection:'row', paddingTop:'0.5rem',paddingBottom:'0.5rem'}}>
    <div style={{marginRight:'2rem'}}>
        <p>ClickBench 是专用于评估分析型数据库性能的基准测试工具，其核心验证场景聚焦于海量宽表处理效能，而非复杂多表关联场景。该性能测试采用头部网络分析平台真实业务数据构建，覆盖点击流分析、结构化日志处理等典型 OLAP 应用场景。</p>
        <p>测试体系由特定查询集合构成，重点验证聚合运算能力与单表处理性能（不涉及复杂表关联操作），因此该测试成为评估实时数据库的标准之一，尤其适用于验证系统在 PB 级数据规模下的数据处理与实时分析能力。</p>
    </div>
    <div>
        <img alt="ClickBench  Benchmark" loading="lazy" width="1200" height="338" decoding="async" data-nimg="1" src="/zh-CN/images/comparisons/clickbench-ck.png" style={{color: 'transparent', marginTop:0}} />
    </div>
</div>


### SSB-Flat SF100 性能测试

<div style={{ display:'flex', justifyContent:'space-between', flexDirection:'row', paddingTop:'0.5rem',paddingBottom:'0.5rem'}}>
    <div style={{marginRight:'2rem'}}>
        <p>SSB-Flat SF100 是专为测试分析型数据库大宽表处理能力设计的性能测试。</p>
        <p>该测试基于星型模式基准（SSB）改造，通过将星型结构扁平化为单一宽表，聚焦单表查询性能验证。其中 SF100 代表数据规模为基准量的 100 倍，可有效评估系统在超大规模数据下的查询效率与扩展能力。</p>
    </div>
    <div>
        <img alt="ClickBench  Benchmark" loading="lazy" width="1000" height="338" decoding="async" data-nimg="1" src="/zh-CN/images/comparisons/ssb-flat-sf100-benchmark-ck.png" style={{color: 'transparent', marginTop:0}} />
    </div>
</div>

### TPC-H SF100 性能测试



<div style={{ display:'flex', justifyContent:'space-between', flexDirection:'row', paddingTop:'0.5rem',paddingBottom:'0.5rem'}}>
    <div style={{marginRight:'2rem'}}>
        <p>TPC-H SF100 是业界公认的数据库性能测试标准，包含 22 条模拟真实企业场景的复杂 SQL 查询。SF100 代表数据规模为基准量的 100 倍，适用于在大规模数据场景下，检验查询性能的验证、评估系统扩展能力。</p>
        <p>**注：由于 ClickHouse 在测试过程中存在 7 个未能完成的查询，最终测试的总耗时结果为 Doris 完整执行 22 个查询的时间、ClickHouse 仅为成功执行 15 个查询的时间。**</p>
    </div>
    <div>
        <img alt="ClickBench  Benchmark" loading="lazy" width="1000" height="338" decoding="async" data-nimg="1" src="/zh-CN/images/comparisons/tpch-sf100-ck.png" style={{color: 'transparent', marginTop:0}} />
    </div>
</div>

### TPC-DS 1TB 性能测试



<div style={{ display:'flex', justifyContent:'space-between', flexDirection:'row', paddingTop:'0.5rem',paddingBottom:'0.5rem'}}>
    <div style={{marginRight:'2rem'}}>
        <p>TPC-DS 1TB 是数据仓库与分析型数据库的权威性能测试，采用约 1TB 数据集（24 张表共约 63.5 亿条数据）构建雪花模型。</p>
        <p>测试中涵盖 99 条复杂查询，以全面检验数据库在关联查询、聚合计算及嵌套子查询等场景的性能表现，模拟网络销售、门店销售等真实业务场景。</p>
        <p>**注：由于 TPC-DS 性能测试中使用了大量关联子查询，而 ClickHouse 在测试时（2024 年 9 月）尚未支持该功能，导致约半数查询无法执行。**</p>
    </div>
    <div>
        <img alt="ClickBench  Benchmark" loading="lazy" width="700" height="338" decoding="async" data-nimg="1" src="/zh-CN/images/comparisons/tpc-ds-1tb-ck.png" style={{color: 'transparent', marginTop:0}} />
    </div>
</div>
